--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "animate.css": "^4.1.1",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.0.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "styled-icons": "^10.47.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
